--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.1.5",
+    "vuefire": "^2.2.2",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
